--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p>About,Skills and Projects</p>
           <buttton class="btn btn-danger">About</buttton>
           <buttton class="btn btn-primary">Skills</buttton>
-          <buttton class="btn btn-success">Project</buttton>
+          <buttton class="btn btn-success">Projects</buttton>
         </div>
       </div>
       <div class="carousel-item">
